--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,25 @@
 <mat-toolbar role="heading">
   <div class="col-md-3 col-xs-1" routerLink="/"><span>
       <i class="fa fa-play-circle"></i>
-      &nbsp; <span class="header-text">FractalUp Music</span> </span></div>
+      &nbsp; <span class="header-text">{{ title }}</span> </span></div>
 
   <div class="col-md-6 col-xs-11 ml-5">
     <div class="search-container">
       <i class="fa fa-search search-icon"></i>
       <input type="text" placeholder="Buscar álbum o canción" class="search-input" #searchBox>
 
+      <mat-list class="search-result" *ngIf="searchResults.length>0 && !hideResult">
+        <mat-list-item class="search-result-item" role="listitem" *ngFor="let item of searchResults">
+          <a (click)="onResultClick(item)">{{
+            item.title }}
+            <span class="item-type" *ngIf="item.type=='track'">Canción</span>
+            <span class="item-type" *ngIf="item.type=='album'">Álbum</span>
+          </a>       
+        </mat-list-item>
+      </mat-list>
     </div>
   </div>
+  
 </mat-toolbar>
 
 <router-outlet></router-outlet>
