--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <h1 class="mt-4">Popular</h1>
   <div class="row">
     <div class="col-lg-2 col-md-3 col-sm-4" *ngFor="let track of chartTracks">
-      <mat-card class="album-card" matRipple>
+      <mat-card class="album-card" matRipple (click)="play(track)">
         <mat-card-content>
           <img [src]="track.album.cover_xl" width="100%"
             class="responsive-image">
