--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,15 @@
   <h1 class="mt-4">Popular</h1>
   <div class="row">
     <div class="col-lg-2 col-md-3 col-sm-4" *ngFor="let track of chartTracks">
-      <mat-card class="album-card" matRipple (click)="play(track)">
-        <mat-card-content>
+      <mat-card class="album-card" matRipple>
+        <mat-card-content (click)="play(track)">
           <img [src]="track.album.cover_xl" width="100%" class="responsive-image">
           <i class="fa fa-play play-icon"></i>
         </mat-card-content>
-        <mat-card-header class="album-header">
+        <div>
           <mat-card-title class="album-title">{{ track.title }}</mat-card-title>
           <mat-card-subtitle class="album-subtitle">{{ track.artist.name }}</mat-card-subtitle>
-        </mat-card-header>
+        </div>
       </mat-card>
     </div>
   </div>
