--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h1{
+    color: rgb(232, 96, 96);
+    font-weight: bold;
+}
