--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,25 +1,30 @@
+.toolbar {
+  background-color: #fafafa;
+  margin-top: 25px;
+}
+
 .search-container {
   position: relative;
   display: block;
-  background-color: #fbfbfb;
-  border-radius: 12px;
+  border:1px solid #828282;
+  border-radius: 50px;
   overflow: hidden;
 }
 
 .search-icon {
   color: #616161;
   position: absolute;
-  top: 14px;
-  left: 26px;
+  top: 9px;
+  right: 25px;
   font-size: 18px;
 }
 
 .search-input {
   font-size: 16px;
   color: #212121;
-  padding: 0 72px;
+  padding: 0 25px;
   box-sizing: border-box;
-  height: 48px;
+  //height: 48px;
   width: 100%;
   font-weight: 400;
   outline: none;
@@ -45,4 +50,37 @@
   font-weight: normal;
   font-size: small;
   margin-left: 7px;
+}
+
+.drawer-container {
+  height: 100%;
+}
+
+.drawer {
+  background-color: #662323;
+  width: 20%;
+}
+
+.logo {
+  width: 70%;
+  margin-top: 50px;
+}
+
+.user-icon {
+  color: #e86060;
+  margin-right: 10px;
+}
+
+.user-text {
+  color: #555555;
+  font-weight: 300;
+}
+
+.sidebar-item1 {
+  color: white;
+}
+
+.sidebar-item2 {
+  color: white;
+  font-weight: 200;
 }
