Change text font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <img src="/assets/img/foxbel-music.png" class="logo">
     </div>
 
-    <div class="container text-left mx-4 mt-4">
+    <div class="container text-left px-5 mt-4">
       <div>
         <h2 class="sidebar-item1">
           Mi Librería
@@ -35,6 +35,8 @@
           </p>
         </a>
       </div>
+
+      <br>
 
       <div>
         <h2 class="sidebar-item1">
