--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-h1{
+body { margin: 0; font-family: Comfortaa; }
+h1, h2{
     color: rgb(232, 96, 96);
     font-weight: bold;
 }
