Add player component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,6 +95,10 @@
     </mat-toolbar>
 
     <router-outlet></router-outlet>
-
+    
   </mat-drawer-content>
 </mat-drawer-container>
+
+<mat-toolbar role="footer" class="music-control">
+  <app-player></app-player>
+</mat-toolbar>
