--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,40 +1,39 @@
 .album-card {
-    overflow: hidden;
-    margin: 5px 0px;
-    padding: 0;
-    cursor: pointer;
-    position: relative;
-    height: 250x;
-    box-shadow: none;
-    //box-shadow: 3px 3px 5px 0px #ccc;
-    z-index: 1;
-    background-color: #fafafa;
-  }
-  
-  .album-title {
-    font-size: 18px;
-    font-weight: 500;
-    color: rgb(85, 85, 85);
-    //margin-left: 15px;
-    height: 40px;
-    overflow: hidden;
-    z-index: 1;
-  }
-  
-  .album-subtitle {
-    font-size: 14px;
-    color: rgb(131, 131, 131);
-    //margin-left: 15px;
-    margin-bottom: 17px;
-    z-index: 1;
-  }
+  overflow: hidden;
+  margin: 5px 0px;
+  padding: 0;
+  cursor: pointer;
+  position: relative;
+  height: 250x;
+  box-shadow: none;
+  //box-shadow: 3px 3px 5px 0px #ccc;
+  z-index: 1;
+  background-color: #fafafa;
+}
 
-  .play-icon{
-    font-size: 50px;
-    position: absolute;
-    top: 20%;
-    left: 40%;
-    color: white;
-    opacity: 0.8;
-  }
-  
+.album-title {
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(85, 85, 85);
+  //margin-left: 15px;
+  height: auto;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.album-subtitle {
+  font-size: 14px;
+  color: rgb(131, 131, 131);
+  //margin-left: 15px;
+  margin-bottom: 17px;
+  z-index: 1;
+}
+
+.play-icon {
+  font-size: 50px;
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  color: white;
+  opacity: 0.8;
+}
