Change player design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,5 +100,5 @@
 </mat-drawer-container>
 
 <mat-toolbar role="footer" class="music-control">
-  <app-player></app-player>
+  <app-player style="width: 100%;"></app-player>
 </mat-toolbar>
