--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -99,5 +99,8 @@ a:hover {
   bottom: 0;
   height: 85px;
   z-index: 2;
+  padding: 0;
   background-color: #eb5757;
+  box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.2);
+  font-family: Comfortaa;
 }
