--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-drawer-container class="drawer-container">
   <mat-drawer mode="side" opened class="drawer text-center">
-    <div routerLink="/">
+    <a routerLink="/">
       <img src="/assets/img/foxbel-music.png" class="logo">
-    </div>
+    </a>
 
     <div class="container text-left px-5 mt-4">
       <div>
