Improve player component (volume)

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -67,3 +67,8 @@ button:hover {background-color: rgba($color: #ffffff, $alpha: 0.4);}
   background: #fbfbfb;
   cursor: pointer;
 }
+
+.control {
+  position: absolute;
+  left: 43%;
+}
