--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
     </div>
-    <div class="p-2 bd-highlight">
+    <div class="p-2 bd-highlight control">
       <div class="row">
         <button type="button">
           <i class="fa fa-step-backward control-icon"></i>
@@ -32,7 +32,7 @@
     <div class="p-2 bd-highlight">
       <div class="row align-items-center">
         <div class="slidecontainer">
-          <input type="range" min="0" max="1" value="0.5" step="0.1" class="slider" (input)="setVolume($event)">
+          <input type="range" min="0" max="100" value="50" step="10"  class="slider" (input)="setVolume($event)">
         </div>
         <button type="button" (click)="mute()" class="pr-4">
           <i class="fa fa-volume-up control-icon" *ngIf="!isMute"></i>
