Fix visual error logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="drawer-container">
   <mat-drawer mode="side" opened class="drawer text-center">
     <a routerLink="/">
-      <img src="/assets/img/foxbel-music.png" class="logo">
+      <img src="assets/img/foxbel-music.png" class="logo">
     </a>
 
     <div class="container text-left px-5 mt-4">
